--- a/hírlap/tuleles.html
+++ b/hírlap/tuleles.html
@@ -66,6 +66,8 @@
             <p>Addigra már több mint kétezer embert szavaztatott meg, sehol sem volt ennyire egyoldalú a megoszlás, ezért rögtön jelezte, 
                 talán ezért tanítanak még mindig, annak dacára, ahogy a tanárokkal, iskolákkal bánik a hatalom. Mérő László szerint</p>
             
+            <th><img src="Mero Laszlo.jpg" height="152px"/> </th>
+            
             <h3>"a hatalom egészen pofátlanul visszaél azzal, hogy a nemzet napszámosai olyanok, amilyenek,"</h3>
             <p>úgy is kezeli őket, ahogy a napszámosokat mindig is szokás volt. Ő semmi esélyt nem lát arra, hogy ezzel a kormányzattal tisztességes alkut lehessen kötni,
                  a tüntetések, sztrájkok, polgári engedetlenségek számára nagyon rokonszenvesek, de a hatalom cinizmusa végül győzni fog.</p>
