--- a/hírlap/tenis.html
+++ b/hírlap/tenis.html
@@ -53,6 +53,8 @@
             <p>A 29 éves osztrák játékos, aki sérülése miatt tavaly nem lehetett ott Melbourne-ben, 
                 a 2020-as fináléban ötszettes csatában maradt alul Novak Djokoviccsal szemben, majd abban az évben megnyerte a US Opent.</p>
             
+            <th><img src="Dominic Thiem.jpg" height="152px"/> </th>
+            
             <p>A világranglista korábbi harmadik helyezettje hosszú ideig súlyos csuklósérüléssel küzdött, de idén visszatért, 
                 s jelenleg már a 102. az ATP rangsorában azok után, hogy júniusban a legjobb 350 közé sem fért be.</p>
 
