--- a/hírlap/szja.html
+++ b/hírlap/szja.html
@@ -61,7 +61,8 @@
                     Azt a választ kapták, hogy a családi kedvezményen a gyermekek után járó, korábban megigényelt családi adó- és járulékkedvezményt kell érteni.</p>
                 
                 <p>Közölték, az az anya, akinek gyermeke 2023. január 1-jén születik, jogosult a 30 év alatti anyák kedvezményére (adómentességére).</p>
-
+                <th><img src="szja.jpg" height="152px"/> </th>
+            
                 <p>Több olvasónk számára ezt követően sem volt egyértelmű, a 2023. január 1-jén születő anya miért jogosult a 30 év alatti anyák kedvezményére, 
                     hiszen ők 2022-ben az adóelőlegnél már igénybe vehették a családi kedvezményt a várandóság ténye alapján.</p>
 
