--- a/hírlap/rezsi.html
+++ b/hírlap/rezsi.html
@@ -61,6 +61,7 @@
                 A gáznál 1729 köbméteres éves fogyasztásig, vagyis 144 köbméter/hó fogyasztásig marad szintén a kedvezményes tarifa: 
                 102 forint köbméterenként, efölött a kabinet által meghatározott piaci ár érvényes.</p>
 
+            <th><img src="Rezsi.jpg" height="152px"/> </th>
             <p>Péntek délelőtt a decemberben létrejött Energiaügyi Minisztérium közölte: májusig nem változik a gáz és az áram ára. </p>
             <p>A Központi Statisztikai Hivatal (KSH) 2021-es adatai szerint 5,2 millió lakossági áramfogyasztó összesen 12,29 milliárd kilowattóra áramot használt, 
                 ami havi szinten átlagosan 197 kWh, azaz a kormány által meghúzott vonal alatt van. Ugyanez érvényes a gázra is: a KSH 3,3 millió lakossági 
