--- a/hírlap/petarda.html
+++ b/hírlap/petarda.html
@@ -59,6 +59,7 @@
             <p>Házi kedvenceket a petárdázás helyszíneire semmiképpen ne vigyük ki, előzzük meg a bajt. A riadtan menekülő állatok néhány óra alatt 5–10 kilométert, 
                 akár több településnyi távolságot is képesek megtenni, előfordul, hogy az elmenekült kedvencek soha többé nem kerülnek elő.</p>
 
+            <th><img src="petarda-kutya.jpg" height="152px"/> </th>  
             <p>Az Orpheus a következő praktikus tanácsokat ajánlja a háziállat-tulajdonosoknak:</p>
             <ul>Kutyáinkra, macskáinkra érdemes a gazda elérhetőségét tartalmazó bilétás nyakörvet kötni, hogy a megtaláló könnyen elérhesse a tulajdonost.</ul>
             <ul>A baj megelőzése érdekében december 30. és január 2. között a kijelölt sétáltató helyeken is fokozott óvatossággal (pórázon) sétáltassuk kutyánkat.</ul>
