--- a/hírlap/pele.html
+++ b/hírlap/pele.html
@@ -54,7 +54,9 @@
             <p>Pelénél 2021 szeptemberében diagnosztizáltak először tumort (a vastagbelében), azonnal megoperálták, majd hetekig az intenzív osztályon kezelték, 
                 ahonnan hamarosan, októberben hazaengedték, miután javult az állapota. December közepén ismét az Albert Einstein-klinikára szállították, 
                 ahol kemoterápiás kezelést kapott – a hónap végén ismét hazamehetett.</p>
-
+            
+            <th><img src="Pelé.jpg" height="152px"/> </th>
+            
             <p>A Katarban zajló labdarúgó-világbajnokság ideje alatt, december 3-án jött az aggasztó hír, mely szerint a legenda szervezete nem reagál 
                 a kemoterápiás ellátásra, ezért a folytatásban a rák ellen már nem kezelik, életkörülményeit javító kezeléseket kap palliatív eljárás keretében.</p>
 
