--- a/hírlap/kina.html
+++ b/hírlap/kina.html
@@ -57,7 +57,9 @@
             <p>Kína-szerte túlterheltek a kórházak a koronavírusos fertőzések számának robbanásszerű növekedése miatt, 
                 miután Peking feloldotta a szigorú kijárási korlátozásokat, amelyek addig alacsony szinten tartották a koronavírus-fertőzések számát, 
                 de jelentősen lefékezték a gazdaság működését, és széles körű tiltakozási hullámot váltottak ki a kínai nagyvárosokban.</p>
-
+            
+            <th><img src="kina-eu.webp" height="152px"/> </th>
+            
             <p>Az ECDC szerint a kínai esetszámok növekedése jelenleg nem befolyásolja az Európai Unió járványügyi helyzetét, 
                 „tekintettel az EU és az Európai Gazdasági Térség (EEA) népességének magas átoltottsági arányára, valamint a Kínában korábban és mostanában kialakult
                  koronavírus-variánsokra”. Ennek megfelelően az ECDC „indokolatlannak tartja a Kínából érkező utasokkal szemben kötelezően alkalmazandó tesztelési 
