--- a/hírlap/idojaras.html
+++ b/hírlap/idojaras.html
@@ -68,6 +68,8 @@
             <h3>Péntek</h3>
             <p>Erősen felhős, párás idő várható, számottevő csapadék nélkül. A délnyugati szél néha megélénkül. 10-11 fok körül alakul a csúcshőmérséklet.</p>
             
+            <th><img src="Előrejelzés.png" height="152px"/> </th>
+            
             <footer>
             </footer>
       </div>
