--- a/hírlap/elbocsat.html
+++ b/hírlap/elbocsat.html
@@ -74,6 +74,8 @@
             <p>Kérdésre válaszolva közölte, továbbra is töretlen a bizalom Matolcsy György irányába, hisz nagyon fontosak a jegybankelnök meglátásai. 
                 A kormány azon dolgozik, hogy Magyarország az évtized nyertese legyen, és ennek érdekében követnek egy adott stratégiai irányt.</p>
             
+            <th><img src="Orban Balazs ped.jpg" height="152px"/> </th>
+            
             <h3>"A kritikák élét és intenzitását tekintve vannak kétségeink, de ezt betudjuk annak, hogy az emberek megélhetését megnehezítő infláció és a hitelezést 
                 ellehetetlenítő magas kamatok miatt nagy rajta a nyomás. Mi úgy látjuk, hogy ahhoz, hogy a jegybankelnök ezen két problémája megoldódjon, 
                 nem óvatoskodó, hanem aktív jegybanki munkára van szükség, ehhez pedig a kormány mindent támogatást megad"</h3>
