--- a/hírlap/dunauj.html
+++ b/hírlap/dunauj.html
@@ -61,6 +61,8 @@
             <p>„2022-es évet írunk, a jelen időszak a mindent átformáló digitalizáció korszaka is egyben. A rugalmas működési megoldásokat a DUE mindig is 
                 előnyben részesítette, ily módon az egyetem ügyviteli működését is örömmel támogatja az online alkalmazások használatával" 
                 -jelentette ki a Dunaújvárosi Egyetem.</p>
+            
+            <th><img src="dunaujvarosi egyetem futese.jfif" height="152px"/> </th>
 
             <footer>
             </footer>
