--- a/hírlap/darts.html
+++ b/hírlap/darts.html
@@ -53,6 +53,8 @@
                 holland Vincent van der Voortot. A világelső Gerwyn Price magabiztos játékkal elsőként jutott be a nyolc közé, 
                 a 17. helyen José de Sousa csak egy szettet nyert a walesi ellen, míg Jonny Clayton döntőszettben győzte le a fiatal Josh Rockot.</p>
 
+            <th><img src="Jonny Clayton.jpg" height="152px"/> </th>
+            
             <p>A nyitó szett elején úgy Luke Humphries, mint Vincent van der Voort hozta a saját játékát, majd az 5. helyen kiemelt angol brékelte holland ellenfelét, 
                 majd a negyedik legben már nem hibázott és behúzta az első szettet.</p>
 
