--- a/hírlap/darts.html
+++ b/hírlap/darts.html
@@ -88,6 +88,7 @@
             <p>Az ötödik szettet De Sousa kezdte, és 2:2-ig hozta a kezdéseit, azonban a mindent eldöntő legben szektort is rontott. Price ezt kihasználta, 
                 két 140-es körrel 100-ra lerakta magát, majd a második meccsnyilát kihasználva bejutott a negyeddöntőbe. </p>
 
+            <th><img src="Gerwyn Price.jpg" height="152px"/> </th>
 
             <footer>
             </footer>
