--- a/hírlap/buli.html
+++ b/hírlap/buli.html
@@ -58,6 +58,7 @@
             <p>Azt kérik, hogy aki alkoholt ivott, ne üljön volán mögé, helyette hívjon taxit, vagy vegyen igénybe sofőrszolgálatot.</p>
             <p>A BRFK egy balesetmegelőzési kisfilmet is készített, a videóval a gyorshajtás veszélyére hívják fel a figyelmet.</p>
 
+            <th><img src="Ittas vezetés.jpg" height="152px"/> </th>
             
             <footer>
             </footer>
