--- a/hírlap/borton.html
+++ b/hírlap/borton.html
@@ -51,6 +51,8 @@
             <h2>33 évet kell börtönben ülnie Mianmar korábbi Nobel-békedíjas vezetőjének, Aung Szan Szú Csínak</h2>
             <h3>*A mianmari bíróság bűnösnek találta korrupció vádjában a korábbi kormányfőt,Aung Szan Szú Csít, és újabb 7 évvel megnövelte börtönbüntetését. 
                 Így a Nobel-békedíjas politikus valószínűleg élete végéig rács mögött lesz.* </h3>
+            
+            <th><img src="Aung San Su Kyi.jpeg" height="152px"/> </th>
 
             <p>A katonai junta 2021-ben ragadta magához a hatalmat a délkelet-ázsiai országban. A katonaság első dolga a világszerte ismert polgárjogi harcos, 
                 Aung Szan Szú Csí letartóztatása volt. Azóta számtalanszor elítélték olyan mondva csinált indokokkal, mint a covid-szabályok megsértése, 
