--- a/hírlap/andrew.html
+++ b/hírlap/andrew.html
@@ -60,6 +60,8 @@
             <p>A vád szerint a négy gyanúsított szervezett bűnözői csoportot hozott létre azzal a céllal, hogy nőket toborozzon, 
                 akiket aztán pornográf tartalmak készítésére kényszerítettek volna, amelyeket eladnak az interneten – közölték a helyi ügyészek. </p>
 
+            <th><img src="Andrew Tate.jpg" height="152px"/> </th>
+            
             <p>Andrew Tate egyébként az internet egyik legmegosztóbb figurájának számít, gyakran borzolja a kedélyeket szexista, 
                 rasszista vagy adott esetben nőgyűlölő megjegyzéseivel. Az influenszer még 2017-ben kapott egy ötéves tiltás a Twittertől, 
                 mert a platform megelégelte nőgyűlölő megjegyzéseit. Tate Elon Musk hatalomátvétele után azonban visszatérhetett az oldalra. </p>
