--- a/hírlap/aldi.html
+++ b/hírlap/aldi.html
@@ -55,6 +55,8 @@
                 A terméket a Prime Hydration készítette és forgalmazza – amelynek alapítója Logan Paul és JJ Olantunji, más néven KSI. 
                 A párost összesen közel negyvenmillió ember követi YouTube-on – írja a Sky News. </p>
 
+            <th><img src="Aldi Prime.jfif" height="152px"/> </th>
+            
             <p>Az italt először októberben kezdték el forgalmazni az Asda üzleteiben: ekkor maximum három palackot vásárolhattak az érdeklődők.</p>
             <p>Az Aldi egy csütörtöki Twitter-bejegyzésében azt írta, hogy egy akció keretein belül mindössze 1,99 fontért adja az italokat, 
                 ám arra is felhívták a figyelmet, hogy a készlet korlátozott, és nem tudják azonnal pótolni.</p>
